# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  confest.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  test_bootstrap.py
hexlet-code/: Makefile
hexlet-code/task_manager/: urls.py
labels/: models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_name.py
locale/ru/LC_MESSAGES/: django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: create.html  delete.html  index.html
task_manager/: mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/tasks/: admin.py
task_manager/templates/: base.html  index.html
task_manager/templates/includes/: footer.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  login.html  registration_form.html  update.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_labels_and_more.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_status.py
users/templates/statuses/: update.html
users/templates/users/: create.html  delete.html  index.html  login.html  update.html
