[project]
name = "hexlet-code"
version = "0.1.0"
description = "task_manager"
readme = "README.md"
requires-python = ">=3.13"
packages = [
  { include = "task_manager" },
]
dependencies = [
  "Django>=5.0",
  "gunicorn",
  "python-dotenv",
  "dj-database-url",
  "psycopg2-binary",
  "django-bootstrap5>=25.1",
  "uv",
  "django-filter>=25.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.1",
    "pytest-django>=4.8.0",
]
test = [
    "pytest",
    "pytest-django>=4.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.pytest.ini_options]
pytest = "*"
pytest-django = "^4.8.0"