[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "task_manager"
readme = "README.md"
requires-python = ">=3.13"
packages = [
    { include = "task_manager" },
    { include = "users" },
    { include = "statuses" },
    { include = "labels" },
    { include = "tasks" }
]

dependencies = [
  "django",
  "gunicorn",
  "python-dotenv",
  "dj-database-url",
  "psycopg2-binary",
  "django-bootstrap5>=25.1",
  "uv",
  "django-filter>=25.1",
  "rollbar",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "ruff>=0.11.6",
]

[tool.hatch.build.targets.wheel]
packages = [
    "task_manager",
    "users",
    "statuses",
    "labels",
    "tasks"
]

[tool.coverage.run]
source = ["task_manager"]
branch = true

[tool.coverage.report]
show_missing = true